--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,79 @@
     transform: rotate(360deg);
   }
 }
+
+.banner-card{
+  background-color: white;
+  width:100vw;
+}
+.banner-title{
+  position:absolute;
+  color:white;
+  top:50vh;
+  left:5vw;
+}
+.banner-text{
+  position:absolute;
+  color:white;
+  top:55vh;
+  left:5vw;
+  margin-right: 5vw;
+}
+.banner-image{
+  height:70vh;
+  width:100%;
+}
+.movies-list{
+  display: flex;
+  flex-wrap:wrap;
+  padding:1rem;
+  justify-content: center;
+}
+
+.movie-card{
+  color:white;
+  margin: 1rem;
+  width: 20vw;
+  position: relative;
+}
+.movie-title{
+  position:absolute;
+  top:1rem;
+  left: 1rem;
+}
+
+.movie-button{
+  position: absolute;
+  top:80%;
+}
+.button-wrapper{
+  display: flex;
+  justify-content: center;
+}
+
+
+
+
+
+
+
+@media screen and (max-width:400px) {
+  .banner-card{
+    height:25vh;
+  }
+
+  .banner-img{
+    height:30vh;
+  }
+
+  .banner-title{
+    top:10vh;
+    left:5vw;
+  }
+
+  .banner-text{
+    top:15vh;
+    left:5vw;
+  }
+
+}
